Fixed covered type dropdown

--- a/ChromeExtension/Style/popup.css
+++ b/ChromeExtension/Style/popup.css
@@ -52,7 +52,11 @@
     right: 0;
     text-align: center;
     font-size: 18px;
-    margin-top: 10px; 
+    margin-top: -300px; 
+}
+
+.link-saved-header.active {
+    margin-top: 10px;
 }
 
 .error-popup {
@@ -71,6 +75,10 @@
     right: 0;
     text-align: center;
     font-size: 18px;
+    margin-top: -300px;
+}
+
+.error-header.active {
     margin-top: 10px;
 }
 
